project/manifests/deployment-todo-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: jjairola/todo-backend@sha256:967eac566a974f34843fcfec9ca1ee4e14feb943b06cfb82b6688cdb50784962
