project/manifests/deployment-webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: image-cache-pvc
      containers:
        - name: webserver
          image: jjairola/webserver:latest
          volumeMounts:
            - mountPath: /app/.cache
              name: cache-volume
