project/manifests/service-broadcaster.yaml
apiVersion: v1
kind: Service
metadata:
  name: broadcaster-svc
spec:
  selector:
    app: broadcaster
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  type: ClusterIP
