project/manifests/service-webserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
spec:
  type: ClusterIP
  selector:
    app: webserver
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 3000
